--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <html>
 	<head>
-		<title>Space Smuggler</title> 
-		<style> 
-			body { margin: 0; } 
-			canvas { width: 100%; height: 100% } 
+		<title>Space Smuggler</title>
+		<style>
+			body { margin: 0; }
+			canvas { width: 100%; height: 100% }
 		</style>
-		
-		<script src="js/three.min.js" type="text/javascript"</script>
+
+		<script src="js/three.min.js" type="text/javascript"></script>
+		<script src="js/physi.js" type="text/javascript"></script>
 		<script src="js/spacesmuggler.js" type="text/javascript"></script>
-		
+
 	</head>
 	<body>
 		<script src="js/spacesmuggler.js" type="text/javascript"></script>
 		<div id="container"></div>
-		
-		
+
+
 	</body>
-	
