--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 
 	</head>
 	<body>
+		<script src="js/DDSLoader.js"></script>
+		<script src="js/MTLLoader.js"></script>
+		<script src="js/OBJMTLLoader.js"></script>
+		<script src="js/OBJLoader.js"></script>
+	
 		<script src="js/spacesmuggler.js" type="text/javascript"></script>
 		<div id="container"></div>
 
